--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "erusev/parsedown": "^1.6",
         "vierbergenlars/php-semver": "^3.0",
         "google/proto-client": "^0.21.0",
-        "google/gax": "^0.21.0",
+        "google/gax": "dev-update-grpc-creds",
         "symfony/lock": "3.3.x-dev#1ba6ac9",
         "phpseclib/phpseclib": "^2"
     },
