--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Google\\Cloud\\": "src"
+            "Google\\Cloud\\": "src",
+            "": "proto"
         }
     },
     "autoload-dev": {
