--- a/google-cloud-bigquery/composer.json
+++ b/google-cloud-bigquery/composer.json
@@ -7,6 +7,10 @@
         "google/cloud-core": "^1.0",
         "ramsey/uuid": "~3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8.36",
+        "google/cloud-storage": "^1.0"
+    },
     "suggest": {
         "google/cloud-storage": "Makes it easier to load data from Cloud Storage into BigQuery"
     },
@@ -21,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Google\\Cloud\\BigQuery\\": ""
+            "Google\\": "Google"
         }
     }
 }
