--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Google\\Cloud\\": "src"
+            "Google\\Cloud\\": "src",
+            "": "proto/src"
         }
     },
     "autoload-dev": {
